# app/Http/Resources/ShowPostResource.php
@@ -4,7 +4,7 @@ namespace App\Http\Resources;
 
 use Illuminate\Http\Resources\Json\JsonResource;
 
-class ShowArticleResource extends ArticleListResource
+class ShowPostResource extends PostsListResource
 {
     /**
      * Transform the resource into an array.
@@ -15,8 +15,7 @@ class ShowArticleResource extends ArticleListResource
     public function toArray($request)
     {
         return array_merge(parent::toArray($request), [
-            'content' => $this->content,
-            'section_id' => $this->section_id,
+            'body' => $this->body,
             'gallery' => $this->gallery->map(function ($image) {
                 return [
                     'image' => asset('storage/' . $image->path)
