# storage/api-docs/api-docs.json
@@ -15,88 +15,6 @@
         }
     ],
     "paths": {
-        "/articles": {
-            "get": {
-                "tags": [
-                    "Articles"
-                ],
-                "summary": "Get list of articles",
-                "description": "Returns list of articles",
-                "operationId": "getArticlesList",
-                "parameters": [
-                    {
-                        "name": "section_id",
-                        "in": "query",
-                        "description": "Section Id",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Successful operation",
-                        "content": {
-                            "application/json": {}
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthenticated"
-                    },
-                    "403": {
-                        "description": "Forbidden"
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    },
-                    "404": {
-                        "description": "not found"
-                    }
-                }
-            }
-        },
-        "/articles/{id}": {
-            "get": {
-                "tags": [
-                    "Articles"
-                ],
-                "summary": "Get Article Data",
-                "description": "Return Article Data",
-                "operationId": "getArticleData",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "Article id",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Successful operation",
-                        "content": {
-                            "application/json": {}
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthenticated"
-                    },
-                    "403": {
-                        "description": "Forbidden"
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    },
-                    "404": {
-                        "description": "not found"
-                    }
-                }
-            }
-        },
         "/login": {
             "post": {
                 "tags": [
@@ -251,14 +169,85 @@
                 }
             }
         },
-        "/sections": {
+        "/posts": {
             "get": {
                 "tags": [
-                    "Sections"
+                    "Posts"
                 ],
-                "summary": "Get list of sections",
-                "description": "Returns list of sections",
-                "operationId": "getSectionsList",
+                "summary": "Get list of posts",
+                "description": "Returns list of posts",
+                "operationId": "getPostsList",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "not found"
+                    }
+                }
+            }
+        },
+        "/posts/{id}": {
+            "get": {
+                "tags": [
+                    "Posts"
+                ],
+                "summary": "Get Post Data",
+                "description": "Return Post Data",
+                "operationId": "getPostData",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Post id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "not found"
+                    }
+                }
+            }
+        },
+        "/services": {
+            "get": {
+                "tags": [
+                    "Services"
+                ],
+                "summary": "Get list of services",
+                "description": "Returns list of services",
+                "operationId": "getServicesList",
                 "responses": {
                     "200": {
                         "description": "Successful operation",
